@@ -1,40 +1,49 @@
 package com.codesoom.assignment.controllers;
 
+import com.codesoom.assignment.application.AuthorizationService;
 import com.codesoom.assignment.application.ProductService;
 import com.codesoom.assignment.domain.Product;
 import com.codesoom.assignment.dto.ProductData;
+import com.codesoom.assignment.errors.InvalidAccessTokenException;
 import com.codesoom.assignment.errors.ProductNotFoundException;
+import com.codesoom.assignment.errors.UserNotFoundException;
+import com.codesoom.assignment.fixture.FixtureData;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Description;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @WebMvcTest(ProductController.class)
 class ProductControllerTest {
-    private static final String VALID_TOKEN = "eyJhbGciOiJIUzI1NiJ9." +
-            "eyJ1c2VySWQiOjF9.ZZ3CUl0jxeLGvQ1Js5nG2Ty5qGTlqai5ubDMXZOdaDk";
-    private static final String INVALID_TOKEN = "eyJhbGciOiJIUzI1NiJ9." +
-            "eyJ1c2VySWQiOjF9.ZZ3CUl0jxeLGvQ1Js5nG2Ty5qGTlqai5ubDMXZOdaD0";
+    private static final String VALID_TOKEN = FixtureData.AccessTokenFixture.VALID_TOKEN.getToken();
+    private static final String SIGNATURE_FAIL_TOKEN = FixtureData.AccessTokenFixture.SIGNATURE_FAIL_TOKEN.getToken();
+    public final String USER_NOT_EXISTS_TOKEN = FixtureData.AccessTokenFixture.USER_NOT_EXISTS_TOKEN.getToken();
+    public Long INVALID_TOKEN_USER_ID = FixtureData.AccessTokenFixture.USER_NOT_EXISTS_TOKEN.getUserId();
 
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
     private ProductService productService;
+
+    @MockBean
+    private AuthorizationService authorizationService;
 
     @BeforeEach
     void setUp() {
@@ -44,7 +53,7 @@ class ProductControllerTest {
                 .maker("냥이월드")
                 .price(5000)
                 .build();
-        given(productService.getProducts()).willReturn(List.of(product));
+        given(productService.getProducts()).willReturn(Collections.singletonList(product));
 
         given(productService.getProduct(1L)).willReturn(product);
 
@@ -71,6 +80,11 @@ class ProductControllerTest {
 
         given(productService.deleteProduct(1000L))
                 .willThrow(new ProductNotFoundException(1000L));
+
+        doNothing().when(authorizationService).checkUserAuthorization("Bearer " + VALID_TOKEN);
+        doThrow(new InvalidAccessTokenException("Bearer " + SIGNATURE_FAIL_TOKEN)).when(authorizationService).checkUserAuthorization("Bearer " + SIGNATURE_FAIL_TOKEN);
+        doThrow(new InvalidAccessTokenException("")).when(authorizationService).checkUserAuthorization("Bearer ");
+        doThrow(new InvalidAccessTokenException(USER_NOT_EXISTS_TOKEN, new UserNotFoundException(INVALID_TOKEN_USER_ID))).when(authorizationService).checkUserAuthorization("Bearer " + USER_NOT_EXISTS_TOKEN);
     }
 
     @Test
@@ -84,7 +98,7 @@ class ProductControllerTest {
     }
 
     @Test
-    void deatilWithExsitedProduct() throws Exception {
+    void detailWithExitedProduct() throws Exception {
         mockMvc.perform(
                 get("/products/1")
                         .accept(MediaType.APPLICATION_JSON_UTF8)
@@ -94,15 +108,86 @@ class ProductControllerTest {
     }
 
     @Test
-    void deatilWithNotExsitedProduct() throws Exception {
+    void detailWithNotExitedProduct() throws Exception {
         mockMvc.perform(get("/products/1000"))
                 .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @Description("header에 authoirization 없으면_isUnauthorized")
+    void createWithoutAuthorization() throws Exception {
+        mockMvc.perform(
+                post("/products")
+                    .accept(MediaType.APPLICATION_JSON_UTF8)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
+                        "\"price\":5000}")
+            ).andExpect(status().isUnauthorized());
+    }
+
+    @Test
+    @Description("빈 authorization token_isUnauthorized")
+    void createWithBlankAuthorization() throws Exception {
+        mockMvc.perform(
+            post("/products")
+                .header(HttpHeaders.AUTHORIZATION, "Bearer ")
+                .accept(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
+                    "\"price\":5000}")
+        ).andExpect(status().isUnauthorized());
+    }
+
+    @Test
+    @Description("정상 authorization_isCreated")
+    void createWithValidAuthorization() throws Exception {
+        mockMvc.perform(
+            post("/products")
+                .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
+                .accept(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
+                    "\"price\":5000}")
+        ).andExpect(status().isCreated());
+
+        verify(authorizationService).checkUserAuthorization(any());
+    }
+
+    @Test
+    @Description("없는유저authorization_401")
+    void createWithInvalidUserAuthorization() throws Exception {
+        mockMvc.perform(
+                post("/products")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + USER_NOT_EXISTS_TOKEN)
+                        .accept(MediaType.APPLICATION_JSON_UTF8)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
+                                "\"price\":5000}")
+        ).andExpect(status().isUnauthorized());
+
+        verify(authorizationService).checkUserAuthorization(any());
+    }
+
+    @Test
+    @Description("비정상 authorization_isUnauthorized")
+    void createWithInvalidAuthorization() throws Exception {
+        mockMvc.perform(
+            post("/products")
+                .header(HttpHeaders.AUTHORIZATION, "Bearer " + SIGNATURE_FAIL_TOKEN)
+                .accept(MediaType.APPLICATION_JSON_UTF8)
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
+                    "\"price\":5000}")
+        ).andExpect(status().isUnauthorized());
+
+        verify(authorizationService).checkUserAuthorization(any());
     }
 
     @Test
     void createWithValidAttributes() throws Exception {
         mockMvc.perform(
                 post("/products")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
                         .accept(MediaType.APPLICATION_JSON_UTF8)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"쥐돌이\",\"maker\":\"냥이월드\"," +
@@ -111,6 +196,7 @@ class ProductControllerTest {
                 .andExpect(status().isCreated())
                 .andExpect(content().string(containsString("쥐돌이")));
 
+        verify(authorizationService).checkUserAuthorization(any());
         verify(productService).createProduct(any(ProductData.class));
     }
 
@@ -118,6 +204,7 @@ class ProductControllerTest {
     void createWithInvalidAttributes() throws Exception {
         mockMvc.perform(
                 post("/products")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
                         .accept(MediaType.APPLICATION_JSON_UTF8)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"\",\"maker\":\"\"," +
@@ -130,6 +217,7 @@ class ProductControllerTest {
     void updateWithExistedProduct() throws Exception {
         mockMvc.perform(
                 patch("/products/1")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
                         .accept(MediaType.APPLICATION_JSON_UTF8)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"쥐순이\",\"maker\":\"냥이월드\"," +
@@ -145,6 +233,7 @@ class ProductControllerTest {
     void updateWithNotExistedProduct() throws Exception {
         mockMvc.perform(
                 patch("/products/1000")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"쥐순이\",\"maker\":\"냥이월드\"," +
                                 "\"price\":5000}")
@@ -158,6 +247,7 @@ class ProductControllerTest {
     void updateWithInvalidAttributes() throws Exception {
         mockMvc.perform(
                 patch("/products/1")
+                        .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
                         .accept(MediaType.APPLICATION_JSON_UTF8)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content("{\"name\":\"\",\"maker\":\"\"," +
@@ -170,6 +260,7 @@ class ProductControllerTest {
     void destroyWithExistedProduct() throws Exception {
         mockMvc.perform(
                 delete("/products/1")
+                .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
         )
                 .andExpect(status().isNoContent());
 
@@ -180,6 +271,7 @@ class ProductControllerTest {
     void destroyWithNotExistedProduct() throws Exception {
         mockMvc.perform(
                 delete("/products/1000")
+                .header(HttpHeaders.AUTHORIZATION, "Bearer " + VALID_TOKEN)
         )
                 .andExpect(status().isNotFound());
 
